# PACE-2022

./: CMakeLists.txt  LICENSE  README.md
include/: BaseCircle.h  FastVC.h  LMCMaxClique.h  NuMVC.h  PCenter.h  Topo.h  myList.h
src/: Topo.cpp  myList.cpp  reduction.cpp
